Escena1Toma1NIOS/DE0Nano_FreeRTOS/.metadata/.plugins/org.eclipse.cdt.ui/NiosII_FreeRTOS.build.log
19:50:07 **** Build of configuration Nios II for project NiosII_FreeRTOS ****
make all 
Info: Building ../NiosII_FreeRTOS_bsp/
make --no-print-directory -C ../NiosII_FreeRTOS_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../NiosII_FreeRTOS_bsp//HAL/inc -I../NiosII_FreeRTOS_bsp/ -I../NiosII_FreeRTOS_bsp//drivers/inc -IFreeRTOS -IFreeRTOS/Common_Demo_Tasks -IFreeRTOS/Common_Demo_Tasks/include -IFreeRTOS/Source -IFreeRTOS/Source/include -IFreeRTOS/Source/portable/MemMang -IFreeRTOS/Source/portable/GCC/NiosII -IFreeRTOS/ParTest  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.c
In file included from ../NiosII_FreeRTOS_bsp//drivers/inc/altera_up_avalon_parallel_port_regs.h:34:0,
                 from hello_world.c:28:
hello_world.c: In function 'prvPrintTask1':
../NiosII_FreeRTOS_bsp//HAL/inc/io.h:73:3: error: invalid initializer
   __builtin_ldwio (__IO_CALC_ADDRESS_NATIVE ((BASE), (REGNUM)))
   ^
../NiosII_FreeRTOS_bsp//drivers/inc/altera_up_avalon_parallel_port_regs.h:41:9: note: in expansion of macro 'IORD'
         IORD(base, ALT_UP_PARALLEL_PORT_DATA)
         ^
hello_world.c:89:25: note: in expansion of macro 'IORD_ALT_UP_PARALLEL_PORT_DATA'
Makefile:802: recipe for target 'obj/default/hello_world.o' failed
   char datosLinea[31] = IORD_ALT_UP_PARALLEL_PORT_DATA(IO_PIO_BASE);
                         ^
make: *** [obj/default/hello_world.o] Error 1

19:50:07 Build Finished (took 267ms)

